[gd_scene load_steps=3 format=3 uid="uid://ddcbfvxjqyycb"]

[ext_resource type="Theme" uid="uid://4fkci148rrkp" path="res://scenes/menu/user_interface_theme.tres" id="1_3qion"]
[ext_resource type="Script" uid="uid://b7q8meckfagea" path="res://code/user_interface.gd" id="2_fj7ho"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3qion")
script = ExtResource("2_fj7ho")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer_Progress" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label_Level" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_Progress"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer_Progress"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
step = 1.0
value = 25.0
show_percentage = false

[node name="Label_Target" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_Progress"]
layout_mode = 2
size_flags_horizontal = 3
text = "Target: 10"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label_Score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1
